src/test/ui/proc-macro/invalid-punct-ident-2.stderr
error: proc macro panicked
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/invalid-punct-ident-2.rs:10:1
=======
  --> $DIR/invalid-punct-ident-2.rs:15:1
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL | invalid_ident!();
   | ^^^^^^^^^^^^^^^^^
   |
   = help: message: `"*"` is not a valid identifier

error: aborting due to previous error

